# open

./: .env  backfill_embeddings.py  main.py  pyproject.toml  requirements.txt  test_groq.py
src/: cloudinary_utils.py  rag_chat.py  rerank.py
src/db_core/: auth.py  crud.py  db.py  dbmodel.py  embeddings.py  init_db.py  setting.py
src/pydentic/: model.py
