[project]
name = "open"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "cloudinary>=1.44.2",
    "datetime>=6.0",
    "fastapi>=0.136.0",
    "groq>=1.2.0",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.26",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.45.0",
]
